--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <properties>
         <java.version>14</java.version>
-        <kotlin.version>1.3.0</kotlin.version>
+        <kotlin.version>1.4.21</kotlin.version>
         <ktor.version>1.3.0</ktor.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
@@ -96,7 +96,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <jvmTarget>14</jvmTarget>
+                    <jvmTarget>${maven.compiler.target}</jvmTarget>
                     <args>
                         <arg>-Xcoroutines=enable</arg>
                     </args>
