Include assets in Build

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
 
     </dependencies>
     <build>
+        <resources>
+            <resource>
+                <directory>${project.basedir}/resources</directory>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
