--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- <parent>
-         <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-parent</artifactId>
-         <version>2.3.3.RELEASE</version>
-         <relativePath/> <!- lookup parent from repository -->
-    <!--</parent>-->
-
     <groupId>de.unistuttgart</groupId>
     <artifactId>programmierprojekt</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -63,7 +56,7 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
-            <version>1.3.61</version>
+            <version>${kotlin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
